# VoronPlateBuilder

./: README.md  main.py  pyproject.toml  repos.txt
voronPlateBuilder/: voronPlateBuilder.py
