[tool.poetry]
name = "voronPlateBuilder"
version = "0.1.0"
description = "Used to automatically pull and build voron plates"
authors = ["Push <ryan.pampush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
